# datascience_exploration

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: Aggregation using window functions [Notebook].ipynb  CTE vs Subquery [Notebook].ipynb  Create a summary statistic report in SQL [Notebook].ipynb  CreatingVisualizations.pbix  Filtering and analysing summary statistic report [Notebook].ipynb  Integrated project - Clustering data to unveil Maji Ndogo's water crisis (Part 2).ipynb  Integrated project - Weaving the data threads of Maji Ndogo's narrative.ipynb  Optimising_SQL_queries_Notebook.ipynb  Reading data across multiple tables [Notebook].ipynb  SQL numeric functions and aggregations [Exercise].ipynb  SQL window functions [Exercise].ipynb  SQL_Exam.ipynb  Top-N analysis using ranking window functions [Notebook].ipynb  test.ipynb
src/03-Sql/Examples/: 01-SELECT and WHERE [Notebook].ipynb  02-Using logical and comparison operators [Notebook].ipynb  03-Logical and comparison operators ii.ipynb  04-Reading data across multiple tables [Notebook].ipynb  05-Aliasing and commenting in SQL.ipynb  06-Initial data analysis with numeric functions [Notebook].ipynb  07-Transform columns using numeric functions[Notebook].ipynb  08-Create a summary statistic report in SQL [Notebook].ipynb  09-Filtering and analysing summary statistic report [Notebook].ipynb  10-Aggregation using window functions [Notebook].ipynb  11-Top-N analysis using ranking window functions [Notebook].ipynb  12-Using value based window functions [Notebook].ipynb  13-Converting between data types.ipynb  14-Using SQL string functions to clean data.ipynb  15-Creating a custom ID using string functions.ipynb  16-Grouping with a case statement.ipynb  17-Conditional-calculations-using-IF.ipynb  18-Evaluating GDP per Capita using CASE and IF [Notebook].ipynb  19-Primary keys - Create Geographic_Location table.ipynb  20-Composite+Foreign Keys - Basic_Services & Economic_Indicators Table[Notebook].ipynb  21-Caveat on dropping tables with relations [Notebook].ipynb  22-Recreating the Access_to_Basic_Services dataset .ipynb  23-Union.ipynb  24-Subquery in the SELECT clause [Notebook].ipynb  25-Subqueries in JOIN [Notebook].ipynb  26-Subquery in FROM.ipynb  27-Subqueries in WHERE.ipynb  28-Optimising_SQL_queries_Notebook.ipynb  29-CTE vs Subquery [Notebook].ipynb  30-Database views [Notebook].ipynb  31-The First Normal Form – 1 NF [Notebook].ipynb  32-The Second Normal Form – 2 NF [Notebook].ipynb  33-The Third Normal Form – 3 NF [Notebook].ipynb
src/03-Sql/Exercises/: 01-Basic SQL queries in a notebook 1 [Exercise].ipynb  02-Querying in notebooks[Exercise].ipynb  05-SQL string functions.ipynb  08-Entity-relationship data models [Exercise].ipynb  09-Join statements [Exercise].ipynb  10-Union [Exrecise].ipynb  12-Subqueries and CTE's [Exercise].ipynb  13-Creating Views 1 [Exercise].ipynb  14-Creating Views 2 [Exercise].ipynb  17-Intro_to_the_third_normal_form_3NF_[Exercise].ipynb  18-Data anomalies - 1 NF [Exercise].ipynb
src/03-Sql/Integrated Project/: 01-Integrated project - Clustering data to unveil Maji Ndogo's water crisis (Part 2).ipynb
src/03-Sql/Queries/: access_to_basic_services.sql  organize_access_to_basic_services.sql
src/04-Visualization/Examples/: 02-FormattingVisuals.pbix  04-When_relationships_cannot_save_us.pbix  05-Exploring_the_data_model_view.pbix  07-DataTransformation.pbix  09-ColumnsWithDAX.pbix
src/05-Python/Basic Python/: 01-Python_variables_and_data_types.ipynb  02-Casting_variables_to_different_data_types_example.ipynb  03-Introduction_to_strings_example.ipynb  04-String_manipulation_techniques_example.ipynb  06-Tuples_examples.ipynb  09-Dictionaries_examples.ipynb  10-Conditional_Execution_Example.ipynb  11-Basic-Python-loops-examples.ipynb  13-python_functions_101_examples.ipynb  14-function_arguments_and_return_values_examples.ipynb  15-big_o_notation_and_computational_complexity_examples.ipynb  16-Search_algorithms_examples.ipynb  17-Sort_algorithms_examples.ipynb  18-Recursive_functions_Examples.ipynb  (+2 more)
src/08-Unsupervised-Learning/: Unsupervised_Learning_Exam_Prep.ipynb
src/Examples/: Multiple_Linear_Regression_Advanced_Regression_Analysis_2.ipynb  Multiple_linear_regression_Fitting_a_model_in_Sklearn_Example.ipynb  Regularisation_Data_scaling_examples.ipynb  Regularisation_LASSO_examples.ipynb  Variables_and_variable_selection_examples.ipynb  mlr_model.pkl
src/Exercise/: Data anomalies – 3 NF [Exercise].ipynb  Intro to the second normal form – 2 NF [Exercise].ipynb  Intro_to_the_first_normal_form_1NF_[Exercise].ipynb  Joins and set operations [Exercise].ipynb  SQL DateTime functions [Exercise].ipynb
src/Integrated Project/: Integrated project - Charting the course for Maji Ndogo's water future.ipynb  Integrated project - Weaving the data threads of Maji Ndogo's narrative.ipynb
src/Python/: Code_challenge_loops_logic_functions_notebook.ipynb  ExploreAiTestBed.ipynb  GCC-Data-structures-types_student_version.ipynb  GCC_Submit_loops_and_functions.ipynb  Integrated_project_P3_Validating_our_data_student.ipynb  Interactive_visualisation_in_Python-examples.ipynb  Introduction_to_data_visualization.ipynb  Statistics_probability_and_distributions.ipynb  advanced_visualisations_in_python.ipynb  data_ingestion.py  field_data_processor.py  weather_data_processor.py
src/Recommender-Systems/: Kaggle Recommender System Starter Notebook.ipynb  Recommender_Systems_webinar.ipynb  exploreai-kaggle-movie-recommender-system.ipynb
src/Sql/: Aggregation using window functions [Notebook].ipynb  Grouping with a case statement.ipynb  Reading data across multiple tables [Notebook].ipynb
src/Unsupervised-Learning/: Unsupervised_Learning_Exam_Prep.ipynb
src/Visualization/: CleaningData.pbix  CreatingVisualizations.pbix  DataModels.pbix  DaxMesures.pbix  PivotingTable.pbix
src/db/: Northwind.db  SoftDevEmployees.db  dam_levels.db
src/sql/: company_data.sql  organize_access_to_basic_services.sql
(+206 files in other folders)
